test/expected/escape_correct_offset.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "[d]**"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "[d]*"
  Literal "*"
]
shit: 2:6: error: The glob pattern '[d]**' matched no file, it expands to its literal text, which is rarely intended.
     2 |  echo [d]*\*
       |       ^~~~~~ here.
note: Probe for matches with compgen -G '[d]**' or relax with set +o failglob.
